--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # THEME. Leave Lines 4-6 alone.
 #---------------------
 remote_theme: kalanicraig/community-archive-jekyll
-repository: 'drew-heider/centennial-struggles.github.io' # change this to your repository name
+repository: 'drew-heider/centennial-struggles' # change this to your repository name
 
 ##############################################
 # WHAT IS ALL THIS STUFF?
