--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ repository: 'idahatiu/idahatiu.github.io' # change this to your repository name
 title: "Centennial Struggles"
 
 # Subtitle of your website. Leave blank if you want to.
-subtitle: ""
+subtitle: "A Community-Driven Archive & Map of Social Struggle in Colorado"
 
 # A longer description of your site (max 150 words). Helps search engines find you.
 description: "Centennial Struggles website"
