--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ authorname : "Centennial Struggles"
 
 # To change the photo on your homepage, open the assets folder in your Github repo, then open the img folder. Upload a photo there. Add only the name of the photo and its extension here. E.g. "alternate_logo.png")
 # Main author of the website.
-sitelogo: "site_logo.jpg"
+sitelogo: "Centennial-Struggles-Logo.jpg"
 
 # What year did you start up this community project?
 sitedate : 2025
