--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ title: "Centennial Struggles"
 subtitle: "A Community-Driven Archive & Map of Social Struggle in Colorado"
 
 # A longer description of your site (max 150 words). Helps search engines find you.
-description: "Centennial Struggles website"
+description: "Centennial Struggles is a community-driven archive & map of social struggle in Colorado, aiming to uncover and visualize marginalized histories in the state with the assistance of archives, individuals, and organizations across the state."
 
 # These credits show up in the includes/_footer.html
 # Main author of the website.
